--- a/consumoAPI-JS-EmpujarCoders/package.json
+++ b/consumoAPI-JS-EmpujarCoders/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "callbacks-js",
+  "name": "consumoapi-js-empujarcoders",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
